--- a/app/src/main/res/layout/content_games_list.xml
+++ b/app/src/main/res/layout/content_games_list.xml
@@ -13,7 +13,7 @@
     tools:context="com.example.lab6.GamesList"
     tools:showIn="@layout/activity_games_list">
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -26,7 +26,7 @@
             android:layout_height="fill_parent"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <ProgressBar
         android:id="@+id/progressBar1"
